--- a/_sources/ch1.ipynb
+++ b/_sources/ch1.ipynb
@@ -207,18 +207,22 @@
     "\n",
     "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
-    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
+    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. \n",
+    "\n",
+    "Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
     "\n",
     "This code will produce a time-course and plot of rates for the dynamics of spruce budworm subject to predation by birds. The dynamics are governed by the following ordinary differential equation:\n",
     "$dN/dt=r0N(1−N/K)−ρN/(N+A)$ .\n",
     "\n",
-    "You will see a set of sliders to choose the values of the 4 parameters (though I suggest you focus on varying $\\rho$). You will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
+    "After it has run, below the code cell you will see a set of sliders to choose the values of the 4 parameters (though I suggest you focus on varying $\\rho$). You will see the two plots appear - a time course of the dynamics, and the plots of the growth and predation rates. The plots will automatically update as you change the values.\n",
+    "\n",
+    "Note that the sliders/plot in this webpage are static and do not change - you need to load the Colab version for them to work.\n",
     "````` \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9d41b7ff",
    "metadata": {
     "tags": [
@@ -229,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4aeeb1a5d8ba4c2da70530dfb6f31995",
+       "model_id": "4519c6a55efd4de7b68196efcf983c5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d403351d493543ec8d6bda845ac19e4d",
+       "model_id": "266d68c2337a4f5196590dbb221ec755",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd1a0f2609ef43d2b07a3c94eea10dd5",
+       "model_id": "94faa13956f54286a89be47b4d62d533",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,8 +274,10 @@
     }
    ],
    "source": [
+    "################\n",
+    "# HAVE A GO: CODING\n",
+    "###############\n",
     "\n",
-    "#@title\n",
     "# Import the necessary libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
