--- a/_sources/ch3.ipynb
+++ b/_sources/ch3.ipynb
@@ -115,7 +115,9 @@
     "\n",
     "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
-    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
+    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. \n",
+    "\n",
+    "Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
     "\n",
     "This code will produce a time-course and phase portrait for the dynamics of two competing species, here assumed to be Red and Grey Squirrels. The dynamics are governed by the following ordinary differential equations:\n",
     "\\begin{align*}\n",
@@ -123,7 +125,9 @@
     "\\frac{dG}{dt}&=G(c-dR-G).\n",
     "\\end{align*}\n",
     "\n",
-    "You will see a set of sliders to choose the values of the 4 parameters, and boxes for you to enter two lots of initial conditions for $R$ and $G$. When you have chosen your values you will see two plots appear - a time course for Red and Grey squirrels, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue)). You can then change the parameter values or initial conditions.\n",
+    "After it has run, below the code cell you will see a set of sliders to choose the values of the 4 parameters, and boxes for you to enter two lots of initial conditions for $R$ and $G$. When you have chosen your values you will see two plots appear - a time course for Red and Grey squirrels, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue)). You can then change the parameter values or initial conditions.\n",
+    "\n",
+    "Note that the sliders/plot in this webpage are static and do not change - you need to load the Colab version for them to work.\n",
     "\n",
     "`````\n",
     " \n"
@@ -131,16 +135,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b138d406",
    "metadata": {
     "tags": [
      "hide-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8aa5dbb95a2e4474a2ebc5529ab09311",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=3.0, description='a', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a24c7397b664b28b913847421b600eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.5, description='b', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d8704f7d00e42908fbe8e18b374e385",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=3.0, description='c', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45d76c11f270473b826a04601993f8fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.75, description='d', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c74d7695196c4bc590fa8aff7d0fa3e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(BoundedFloatText(value=3.0, description='1st R(0)', max=5.0), BoundedFloatText(value=3.0, descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c09bc615ef9045f6bbde517ec4b53b57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(BoundedFloatText(value=1.0, description='2nd R(0)', max=5.0), BoundedFloatText(value=1.0, descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa74bd6268e145a0bd69c1e479b722d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#@title\n",
+    "################\n",
+    "# HAVE A GO: CODING\n",
+    "################\n",
+    "\n",
     "# Import the necessary libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
