--- a/_sources/ch4.ipynb
+++ b/_sources/ch4.ipynb
@@ -122,7 +122,9 @@
     "\n",
     "`````{admonition} Have a go: coding\n",
     ":class: tip\n",
-    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
+    "**To use the code, click the rocket icon at the top of the page, and then click Colab**. This will take you to a live version of this page where you can run the code. \n",
+    "\n",
+    "Scroll down to the code cell below and either click in the cell and hit Shift-Enter, or click on the 'Play' icon in the top-left of the cell. *You may see a warning about loading content from Github - click 'Run anyway'.*\n",
     "\n",
     "This code will produce a time-course and phase portrait for the dynamics of a predator and its prey. The dynamics are governed by the following ordinary differential equations:\n",
     "\\begin{align*}\n",
@@ -130,9 +132,9 @@
     "\\frac{dP}{dt}&=P\\left(-c+\\frac{dN}{N+A}\\right).\n",
     "\\end{align*}\n",
     "\n",
-    "You will see a set of sliders to choose the values of the 6 parameters, and boxes for you to enter two lots of initial conditions for $N$ and $P$. You will see two plots appear - a time course for the Prey and the Predator, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue/green)). You can then change the parameter values or initial conditions to update the plots.\n",
+    "After you run the code, velow the code cell you will see a set of sliders to choose the values of the 6 parameters, and boxes for you to enter two lots of initial conditions for $N$ and $P$. You will see two plots appear - a time course for the Prey and the Predator, and a phase portrait (including nullclines (red/black) and 2 trajectories (blue/green)). You can then change the parameter values or initial conditions to update the plots.\n",
     "\n",
-    "\n",
+    "Note that the sliders/plot in this webpage are static and do not change - you need to load the Colab version for them to work.\n",
     "`````\n",
     "\n",
     "\n"
@@ -140,16 +142,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6429dc70",
    "metadata": {
     "tags": [
      "hide-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f268fd58c5d42f29c76ff46b5a6544f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=4.0, description='alpha', max=5.0, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0975bcf951ae4c7b8adc4bf3abc674d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=1.0, description='A', max=5.0, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd416e11a22444839dcbecdf597bafb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=4.0, description='a', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7edfb829e574e099839380f6cef24e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=1.0, description='b', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ceaf8d8a62e4beaa7fd64ac893a8000",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.5, description='c', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "295d268d8fb54f1d8a3c034fbfc0d0b0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=2.0, description='d', max=5.0, min=0.5, step=0.25)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d4cd389ef5449a990abee42b816d160",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(BoundedFloatText(value=1.5, description='1st N(0)', max=5.0), BoundedFloatText(value=6.0, descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b177b922fa944694a21d4ecbf4d31741",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(BoundedFloatText(value=0.5, description='2nd N(0)', max=5.0), BoundedFloatText(value=4.0, descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6009c71c87ca4c038627d330501f4145",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#@title\n",
+    "################\n",
+    "# HAVE A GO: CODING\n",
+    "################\n",
+    "\n",
     "# Import the necessary libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
