--- a/_sources/level4.ipynb
+++ b/_sources/level4.ipynb
@@ -10,7 +10,7 @@
     "````{warning}\n",
     "This webpage summarises some important details only for students in their 4th year taking MAS61024 *Further Topics in Mathematical Biology*.\n",
     "````\n",
-    "\n",
+    " \n",
     "The MAS61024 version of the module is worth 15 credits - 5 more than the 3rd year version, therefore requiring additional work (roughly 50 hours extra). Importantly, 4th year students will undertake all of the same learning activities and assessments as the 3rd year students. This means students should:\n",
     "\n",
     "* Attend all scheduled lectures and computer labs.\n",
@@ -28,7 +28,7 @@
    "id": "9e6e3aa8",
    "metadata": {},
    "source": [
-    "In addition to these activities and assessments, you will also undertake independent study to produce a project report. A list of possible projects are provided below. The final report should be 4 pages long and the project as a whole should account for around 50 hours of work. The deadline for the report is 4pm Monday 11th December (week 12) and is worth the remaining 40% of your final module mark.\n",
+    "In addition to these activities and assessments, you will also undertake independent study to produce a project report. A list of possible projects are provided below. The final report should be no more than 6 pages long and the project as a whole should account for around 50 hours of work. The deadline for the report is 4pm Monday 11th December (week 12) and is worth the remaining 40% of your final module mark.\n",
     "\n",
     "You will be supervised by a member of SoMaS staff with an interest in the research area, and you may be working on the same general topic as other students, but you will undertake the majority of the work independently. \n",
     "\n",
